<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewTitleSecondFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/titleSecondFragment"
        android:textSize="30sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textViewTitleSendDataToMainFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/titleSendDataToMainFragment"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/editTextDataToMainFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/buttonSendDataToMainFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/buttonSendData"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textViewLastDataFromMainFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/lastDataFromMainFragment"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textViewTitleSendDataToThirdFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/titleSendDataToThirdFragment"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/editTextDataToThirdFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/buttonSendDataToThirdFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/buttonSendData"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textViewLastDataFromThirdFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/lastDataFromThirdFragment"
        android:textColor="@color/black"/>



</LinearLayout>